--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="beginner">Beginner</string>
     <string name="baller">Baller</string>
     <string name="finish">Finish</string>
+    <string name="search_league">Looking for Co-ed beginner League near you...</string>
 </resources>
